tests/rosetta/out/Swift/averages-arithmetic-mean.swift
// Generated by Mochi compiler v0.10.26 on 2025-07-16T09:55:10Z
func mean(_ v: [Double]) -> [String: any] {
    if v.count == 0 {
        return ["ok": false]
    }
    var sum = 0.0
    var i = 0
    while i < v.count {
        sum = sum + v[i]
        i = i + 1
    }
    return ["ok": true, "mean": sum / (Double(v.count))]
}
func main() {
    var sets = [[Any](), [3.0, 1.0, 4.0, 1.0, 5.0, 9.0], [100000000000000000000.0, 3.0, 1.0, 4.0, 1.0, 5.0, 9.0, -100000000000000000000.0], [10.0, 9.0, 8.0, 7.0, 6.0, 5.0, 4.0, 3.0, 2.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.11], [10.0, 20.0, 30.0, 40.0, 50.0, -100.0, 4.7, -1100.0]]
    for v in sets {
        print("Vector: " + String(v))
        let r = mean(v)
        if r["ok"] {
            print("Mean of " + String(v.count) + " numbers is " + String(r["mean"]))
        }
        else {
            print("Mean undefined")
        }
        print("")
    }
}
main()
